@@ -1,19 +1,11 @@
 package ru.perminov.carpool.client;
 
-import jakarta.persistence.ElementCollection;
-import org.jsoup.Jsoup;
-import org.jsoup.nodes.Document;
-import org.jsoup.nodes.Element;
-import org.jsoup.nodes.FormElement;
-import org.jsoup.select.Elements;
-
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.List;
+import java.net.URI;
+import java.net.URISyntaxException;
+
+import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.chrome.ChromeDriver;
 
 public class ClientWialon {
     String clientId = "GpsTracker";
@@ -24,26 +16,12 @@ public class ClientWialon {
     String flags = "0";
 
 
-    public void getToken(String username, String password) throws IOException {
-        URL url = new URL("https://hosting.wln-hst.com/login.html?client_id=GpsTracker&access_type=-1&lang=ru");
+    public void getToken(String username, String password) throws IOException, URISyntaxException {
+        URI url = new URI("https://hosting.wln-hst.com/login.html?client_id=GpsTracker&access_type=-1&lang=ru");
 
-        try {
-            // Загрузка веб-страницы с помощью Jsoup
-            Document document = Jsoup.connect(url.toExternalForm()).get();
-            Elements el = document.getAllElements();
-
-            // Поиск элемента, который вызывает функцию getMainTemplate
-            Element getMainTemplateElement = document.getAllElements().get(14);
-            getMainTemplateElement.executeJavaScript("getMainTemplate()");
-            System.out.println(getMainTemplateElement);
-
-
-             // Проверка, найден ли элемент
-            if (getMainTemplateElement != null) {
-                System.out.println("Элемент найден.");
-            } else {
-                System.out.println("Элемент не найден.");
-            }
+        System.setProperty("webdriver.chrome.driver", "C:\\Users\\Андрей\\Desktop\\chrome-win64\\chrome.exe");
+        WebDriver driver = new ChromeDriver();
+        driver.navigate();
 
 
 //            System.out.println(document);
@@ -56,13 +34,9 @@ public class ClientWialon {
 //            }
 
 //            System.out.println(document);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-
     }
 
-    public static void main(String[] args) throws IOException {
+    public static void main(String[] args) throws IOException, URISyntaxException {
         ClientWialon clientWialon = new ClientWialon();
         clientWialon.getToken("ntks_test", "ntks_test");
     }
